# SpringLab

./: CMakeLists.txt  README.md  SpringLab TODO.txt  UserSettings.example.cmake  changes.txt  license.txt
Authoring/: Actions.psd  InitialConditions.psd  SimulationControl.psd
Benchmarks/: CMakeLists.txt  Utils.cpp  Utils.h
Data/: materials_structural.json
Data/Shaders/: grid.glsl  points.glsl  springs.glsl
SLabCoreLib/: AABB.h  Buffer.h  BufferAllocator.h  CMakeLists.txt  CacheModel.h  Chronometer.h  CircularList.h  Colors.h  ElementContainer.h  ElementIndexRangeIterator.h  EventDispatcher.h  FileSystem.h  FixedSizeVector.h  FloatingPoint.h  ILayoutOptimizer.h  ISimulationEventHandler.h  ImageData.h  ImageFileTools.cpp  ImageFileTools.h  ImageSize.h  IndexRemap.h  IndexRemapper.h  Log.cpp  Log.h  Object.h  ObjectBuilder.cpp  ObjectBuilder.h  ObjectBuilderTypes.h  ObjectDefinition.cpp  ObjectDefinition.h  ObjectSimulatorSpecificStructure.h  ParallelThreadPool.cpp  ParallelThreadPool.h  PerfStats.h  Points.cpp  Points.h  RenderContext.cpp  RenderContext.h  ResourceLocator.h  SLabDebug.h  (+39 more)
SLabCoreLib/Simulator/Classic/: ClassicSimulator.cpp  ClassicSimulator.h  ClassicSimulatorParameters.cpp  ClassicSimulatorParameters.h
SLabCoreLib/Simulator/Common/: CommonSimulatorParameters.cpp  CommonSimulatorParameters.h  ISimulator.h  SimulatorCommonParameters.h  SimulatorRegistry.cpp  SimulatorRegistry.h
SLabCoreLib/Simulator/FS/: FSBaseSimulator.cpp  FSBaseSimulator.h  FSByPointCompactIntegratingSimulator.cpp  FSByPointCompactIntegratingSimulator.h  FSByPointCompactSimulator.cpp  FSByPointCompactSimulator.h  FSByPointGaussSeidelSimulator.cpp  FSByPointGaussSeidelSimulator.h  FSByPointSimulator.cpp  FSByPointSimulator.h  FSBySpringIntrinsics.cpp  FSBySpringIntrinsics.h  FSBySpringIntrinsicsLayoutOptimizationSimulator.cpp  FSBySpringIntrinsicsLayoutOptimizationSimulator.h  FSBySpringIntrinsicsSimulator.cpp  FSBySpringIntrinsicsSimulator.h  FSBySpringStructuralIntrinsicsMTSimulator.cpp  FSBySpringStructuralIntrinsicsMTSimulator.h  FSBySpringStructuralIntrinsicsMTVectorizedSimulator.cpp  FSBySpringStructuralIntrinsicsMTVectorizedSimulator.h  FSBySpringStructuralIntrinsicsSimulator.cpp  FSBySpringStructuralIntrinsicsSimulator.h  FSBySpringStructuralPseudoIntrinsicsMTVectorizedSimulator.cpp  FSBySpringStructuralPseudoIntrinsicsMTVectorizedSimulator.h  FSCommonSimulatorParameters.cpp  FSCommonSimulatorParameters.h
SLabCoreLib/Simulator/FastMSS/: FastMSSBasicSimulator.cpp  FastMSSBasicSimulator.h  FastMSSCommonSimulatorParameters.cpp  FastMSSCommonSimulatorParameters.h
SLabCoreLib/Simulator/GaussSeidel/: GaussSeidelByPointSimulator.cpp  GaussSeidelByPointSimulator.h  GaussSeidelCommonSimulatorParameters.cpp  GaussSeidelCommonSimulatorParameters.h
SLabCoreLib/Simulator/PositionBased/: PositionBasedBasicSimulator.cpp  PositionBasedBasicSimulator.h  PositionBasedCommonSimulatorParameters.cpp  PositionBasedCommonSimulatorParameters.h
SLabOpenGL/: CMakeLists.txt  SLabOpenGL.h
SpringLab/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  ControlToolbar.cpp  ControlToolbar.h  LoggingDialog.cpp  LoggingDialog.h  MainApp.cpp  MainFrame.cpp  MainFrame.h  ProbePanel.cpp  ProbePanel.h  ProbeToolbar.cpp  ProbeToolbar.h  ScalarTimeSeriesProbeControl.h  SettingsDialog.cpp  SettingsDialog.h  SettingsManager.cpp  SettingsManager.h  StandardSystemPaths.cpp  StandardSystemPaths.h  SyntheticObjectDialog.cpp  SyntheticObjectDialog.h  ToolController.cpp  ToolController.h  Tools.cpp  Tools.h  WxHelpers.cpp  WxHelpers.h
SpringLab/Resources/: SLabAAA.xpm  SLabBBB.xpm  SpringLab.rc
SpringLab/UIControls/: ExponentialSliderCore.cpp  ExponentialSliderCore.h  FixedTickSliderCore.cpp  FixedTickSliderCore.h  ISliderCore.h  LinearSliderCore.cpp  LinearSliderCore.h  ScalarTimeSeriesProbeControl.cpp  ScalarTimeSeriesProbeControl.h  SimulationTimeStepSliderCore.cpp  SimulationTimeStepSliderCore.h  SliderControl.h
